--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,9 @@
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/leaflet/dist/leaflet.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/sepa.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -94,7 +96,9 @@
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/leaflet/dist/leaflet.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/sepa.js"
+            ]
           }
         },
         "lint": {
