--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.4.1",
     "leaflet": "^1.6.0",
     "@types/leaflet": "^1.5.12",
+    "@arces-wot/sepa-js": "^0.10.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
