--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
+    "angular-plotly.js": "^2.0.0",
     "bootstrap": "^4.4.1",
     "leaflet": "^1.6.0",
     "@types/leaflet": "^1.5.12",
     "@arces-wot/sepa-js": "^0.10.7",
+    "plotly.js-basic-dist-min": "^1.53.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
