--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/leaflet": "^1.5.12",
     "angular-plotly.js": "^2.0.0",
     "bootstrap": "^4.4.1",
+    "file-saver": "^2.0.2",
     "immutable": "^4.0.0-rc.12",
     "leaflet": "^1.6.0",
     "plotly.js-basic-dist-min": "^1.53.0",
