--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   "dependencies": {
     "@angular/animations": "^9.1.1",
     "@angular/common": "^9.1.1",
-    "@angular/compiler": "^9.1.1",
-    "@angular/core": "^9.1.1",
-    "@angular/forms": "^9.1.1",
-    "@angular/localize": "^9.1.1",
-    "@angular/platform-browser": "^9.1.1",
-    "@angular/platform-browser-dynamic": "^9.1.1",
-    "@angular/router": "^9.1.1",
+    "@angular/compiler": "^9.1.2",
+    "@angular/core": "^9.1.2",
+    "@angular/forms": "^9.1.2",
+    "@angular/localize": "^9.1.2",
+    "@angular/platform-browser": "^9.1.2",
+    "@angular/platform-browser-dynamic": "^9.1.2",
+    "@angular/router": "^9.1.2",
     "@arces-wot/sepa-js": "^0.10.7",
-    "@ng-bootstrap/ng-bootstrap": "^6.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.3",
     "@types/file-saver": "^2.0.1",
     "@types/leaflet": "^1.5.12",
     "angular-plotly.js": "^2.0.0",
@@ -37,8 +37,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.901.1",
     "@angular/cli": "^9.1.1",
-    "@angular/compiler-cli": "^9.1.1",
-    "@angular/language-service": "^9.1.1",
+    "@angular/compiler-cli": "^9.1.2",
+    "@angular/language-service": "^9.1.2",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.35",
@@ -50,7 +50,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.3",
+    "protractor": "^5.4.4",
     "ts-node": "~8.3.0",
     "tslint": "^6.1.1",
     "typescript": "~3.8.3"
