--- a/package.json
+++ b/package.json
@@ -23,27 +23,27 @@
     "@angular/router": "^9.1.11",
     "@arces-wot/sepa-js": "^0.10.10",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
-    "@triply/yasgui": "^4.0.123",
+    "@triply/yasgui": "^4.1.1",
     "@types/file-saver": "^2.0.1",
-    "@types/leaflet": "^1.5.12",
+    "@types/leaflet": "^1.5.15",
     "angular-plotly.js": "^2.0.0",
     "bootstrap": "^4.5.0",
     "file-saver": "^2.0.2",
     "immutable": "^4.0.0-rc.12",
     "leaflet": "^1.6.0",
-    "plotly.js-basic-dist-min": "^1.54.3",
-    "rxjs": "^6.5.5",
+    "plotly.js-basic-dist-min": "^1.54.5",
+    "rxjs": "^6.6.0",
     "tslib": "^1.13.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.8",
-    "@angular/cli": "^9.1.8",
+    "@angular-devkit/build-angular": "^0.901.10",
+    "@angular/cli": "^9.1.10",
     "@angular/compiler-cli": "^9.1.11",
     "@angular/language-service": "^9.1.11",
-    "@types/jasmine": "~3.5.0",
+    "@types/jasmine": "^3.5.11",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.47",
+    "@types/node": "^12.12.48",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
