--- a/package.json
+++ b/package.json
@@ -12,49 +12,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.11",
-    "@angular/common": "^9.1.11",
-    "@angular/compiler": "^9.1.11",
-    "@angular/core": "^9.1.11",
-    "@angular/forms": "^9.1.11",
-    "@angular/localize": "^9.1.11",
-    "@angular/platform-browser": "^9.1.11",
-    "@angular/platform-browser-dynamic": "^9.1.11",
-    "@angular/router": "^9.1.11",
-    "@arces-wot/sepa-js": "^0.10.10",
-    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@angular/animations": "^10.0.4",
+    "@angular/common": "^10.0.4",
+    "@angular/compiler": "^10.0.4",
+    "@angular/core": "^10.0.4",
+    "@angular/forms": "^10.0.4",
+    "@angular/localize": "^10.0.4",
+    "@angular/platform-browser": "^10.0.4",
+    "@angular/platform-browser-dynamic": "^10.0.4",
+    "@angular/router": "^10.0.4",
+    "@arces-wot/sepa-js": "^0.12.0",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@triply/yasgui": "^4.1.1",
     "@types/file-saver": "^2.0.1",
-    "@types/leaflet": "^1.5.15",
+    "@types/leaflet": "^1.5.16",
     "angular-plotly.js": "^2.0.0",
     "bootstrap": "^4.5.0",
     "file-saver": "^2.0.2",
     "immutable": "^4.0.0-rc.12",
     "leaflet": "^1.6.0",
-    "plotly.js-basic-dist-min": "^1.54.5",
+    "plotly.js-basic-dist-min": "^1.54.6",
     "rxjs": "^6.6.0",
-    "tslib": "^1.13.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.10",
+    "@angular-devkit/build-angular": "^0.1000.3",
     "@angular/cli": "^10.0.3",
-    "@angular/compiler-cli": "^9.1.11",
-    "@angular/language-service": "^9.1.11",
+    "@angular/compiler-cli": "^10.0.4",
+    "@angular/language-service": "^10.0.4",
     "@types/jasmine": "^3.5.11",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.48",
-    "codelyzer": "^5.1.2",
+    "@types/node": "^14.0.23",
+    "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.4.1",
+    "jasmine-spec-reporter": "~5.0.2",
+    "karma": "~5.1.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~3.0.1",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~3.3.1",
     "karma-jasmine-html-reporter": "^1.5.4",
-    "protractor": "^5.4.4",
-    "ts-node": "~8.3.0",
+    "protractor": "^7.0.0",
+    "ts-node": "~8.10.2",
     "tslint": "^6.1.2",
-    "typescript": "~3.8.3"
+    "typescript": "^3.9.6"
   }
 }
