--- a/package.json
+++ b/package.json
@@ -12,49 +12,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.4",
-    "@angular/common": "^10.0.4",
-    "@angular/compiler": "^10.0.4",
-    "@angular/core": "^10.0.4",
-    "@angular/forms": "^10.0.4",
-    "@angular/localize": "^10.0.4",
-    "@angular/platform-browser": "^10.0.4",
-    "@angular/platform-browser-dynamic": "^10.0.4",
-    "@angular/router": "^10.0.4",
+    "@angular/animations": "^10.0.7",
+    "@angular/common": "^10.0.7",
+    "@angular/compiler": "^10.0.7",
+    "@angular/core": "^10.0.7",
+    "@angular/forms": "^10.0.7",
+    "@angular/localize": "^10.0.7",
+    "@angular/platform-browser": "^10.0.7",
+    "@angular/platform-browser-dynamic": "^10.0.7",
+    "@angular/router": "^10.0.7",
     "@arces-wot/sepa-js": "^0.12.0",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
-    "@triply/yasgui": "^4.1.1",
+    "@triply/yasgui": "^4.1.3",
     "@types/file-saver": "^2.0.1",
-    "@types/leaflet": "^1.5.16",
+    "@types/leaflet": "^1.5.17",
     "angular-plotly.js": "^2.0.0",
     "bootstrap": "^4.5.0",
     "file-saver": "^2.0.2",
     "immutable": "^4.0.0-rc.12",
     "leaflet": "^1.6.0",
-    "plotly.js-basic-dist-min": "^1.54.6",
-    "rxjs": "^6.6.0",
+    "plotly.js-basic-dist-min": "^1.54.7",
+    "rxjs": "^6.6.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.3",
-    "@angular/cli": "^10.0.3",
-    "@angular/compiler-cli": "^10.0.4",
-    "@angular/language-service": "^10.0.4",
-    "@types/jasmine": "^3.5.11",
+    "@angular-devkit/build-angular": "^0.1000.5",
+    "@angular/cli": "^10.0.5",
+    "@angular/compiler-cli": "^10.0.7",
+    "@angular/language-service": "^10.0.7",
+    "@types/jasmine": "^3.5.12",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^14.0.23",
+    "@types/node": "^14.0.27",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.2",
-    "karma": "~5.1.0",
+    "karma": "^5.1.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~3.3.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "^7.0.0",
     "ts-node": "~8.10.2",
-    "tslint": "^6.1.2",
-    "typescript": "^3.9.6"
+    "tslint": "^6.1.3",
+    "typescript": "^3.9.7"
   }
 }
